<resources>

    <string name="permission_preference" translatable="false">PERMISSION_PREFERENCE</string>
    <string name="permission_access_fine_location" translatable="false">PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location" translatable="false">PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_access_camera" translatable="false">PERMISSION_ACCESS_CAMERA</string>
    <string name="allow_location_permission_in_settings">Please allow location permission in your app settings</string>

    <string name="app_name">ListaPro</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_required">Phone number is required</string>
    <string name="not_valid_phone">Please enter a valid phone number</string>
    <string name="code_required">Verification code is required</string>
    <string name="not_valid_code">Verification code is not valid</string>
    <string name="input_phone_description">Please take a moment to verify your phone number.\nThis helps us confirm your indentity and secure your account.</string>
    <string name="sms_sent_to">We just sent an SMS to&#160;</string>
    <string name="with_code">&#160;with a code for you to enter here</string>
    <string name="welcome_to_listapro">Welcome to Lista Pro</string>
    <string name="my_orders">Orders</string>
    <string name="represents_the_shop_s_orders">represents the shop\'s orders</string>
    <string name="next">Next</string>
    <string name="hint_verification_code">123456</string>
    <string name="hint_phone_number">123456789</string>
    <string name="country_flag">Country flag</string>
    <string name="shop_added">Great! you\'ve just added your shop</string>
    <string name="shop_name_required">Shop Name required</string>
    <string name="signing_up">Signing up…</string>
    <string name="loading">Loading…</string>
    <string name="error_network">Please, check your network connection.</string>
    <string name="add_shop_desc">the addition of your store will allow you to enjoy ListaPro</string>
    <string name="your_shop_name">Your shop name</string>
    <string name="add_my_shop">Add my Shop</string>
    <string name="shop_type">shop type :</string>
    <string name="choose_shop_type">Choose your Shop Type</string>
    <string name="nature_of_items_for_shop_type">Choose the nature of items you\'re selling</string>
    <string name="required_shop_type">Shop Type is required</string>
    <string name="city_required">City is required</string>
    <string name="default_category_required">Please, choose at least one category</string>
    <string name="my_shop">My Shop</string>
    <string name="client">Client :</string>
    <string name="client_name">Client NameNAmeName</string>
    <string name="reference">Ref :</string>
    <string name="order_reference">Order reference</string>
    <string name="date">Registration date :</string>
    <string name="order_date">Order date</string>
    <string name="ordered_good_name">Ordered good name</string>
    <string name="ordered_good_description">Ordered good description</string>
    <string name="item_icon">Item icon</string>
    <string name="finish">Finish</string>
    <string name="confirm_order_ready">A notification will be sent to your client. Do you confirm ?</string>
    <string name="order_ready">Order ready confirmation</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="notification_sent_to_client">A notification has been sent to your client</string>
    <string name="available">Available</string>
    <string name="not_available">Not Available</string>
    <string name="shop_picture">Shop picture</string>
    <string name="shop_name">Shop Name</string>
    <string name="phone">Phone : </string>
    <string name="items_sold">Items sold :</string>
    <string name="category1_n_category2">- category1  - category2</string>
    <string name="no_order_registered">No order registered</string>
    <string name="status">Status</string>
    <string name="items_number">items number :</string>
    <string name="update_items_status">Please, update the items status.</string>
    <string name="ongoing_orders">Ongoing orders</string>
    <string name="closed_orders">Processed orders</string>
    <string name="opening">Opening</string>
    <string name="closing">Closing</string>
    <string name="forTime">For :</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="registered">Registered</string>
    <string name="read">Read</string>
    <string name="can_collect">Order ready</string>
    <string name="completed">Completed</string>
    <string name="not_supported">Items not available</string>
    <string name="sign_in_failed">Signing in failed. please try again.</string>
    <string name="shop_data">Shop data</string>
    <string name="select_your_city">Select your city</string>
    <string name="select_your_shop_type">Select your shop type</string>
    <string name="back">Back</string>
    <string name="select_categories">Select the categories you\'re selling</string>
    <string name="enter_your_shop_name">Enter your shop name</string>
    <string name="share_message">Gagnez du temps avec Lista, l\'application qui facilite la corvée des courses ;-)</string>
    <string name="listapro">ListaPro</string>
    <string name="enable_location">Please enable location (GPS)</string>
    <string name="error_opening_window">Make sure closing time is after opening time</string>
    <string name="share">Partager</string>
    <string name="delivery_type">Livraison le :</string>
    <string name="to_collect">Collecter le :</string>
    <string name="_123">123</string>
    <string name="livraison_le">Livraison le :</string>
    <string name="vendredi_09">Vendredi 09</string>
    <string name="client_text">Client :</string>
    <string name="name_client">prenom nom</string>
    <string name="phone_num_text">06 12 34 56 78</string>
    <string name="adresse">Adresse :</string>
    <string name="address_example">Appt 6, Rue khalij kabiss Hay el Fath 10100 Rabat ferfzerfzerf</string>
    <string name="localisation_gps">Localisation GPS</string>
    <string name="order_details_title">Détails de la commande</string>
    <string name="a_livrer">A livrer</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>
    <string name="_212">+212</string>
    <string name="_123456789">123456789</string>
    <string name="tableau_de_bord">Tableau de bord</string>
    <string name="mes_clients">Mes clients</string>
    <string name="in_progress">(Disponible prochainement)</string>
    <string name="sync">Sync</string>
    <string name="total_commande_label">Total Commande (DHs) :</string>
    <string name="_000_00">00000.00</string>
    <string name="order_price_not_filled">Votre client ne pourra pas consulter l\'addition. Voulez-vous envoyer la confirmation quand même ?</string>
    <string name="prix_dhs">Total (Dhs) :</string>
    <string name="total_bill_empty">Total commande non renseigné</string>
    <string name="no_more_orders">Il n\'y plus de commandes à afficher…</string>

</resources>
