<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.ShopNameFragment"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/txtSelectCity"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/enter_your_shop_name"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editShopName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_shop_name"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="@dimen/text_content_margin_large"
        android:textSize="@dimen/text_content_size_large" />

    <GridLayout
        android:id="@+id/gridOpeningHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:columnCount="4"
        android:rowCount="2"
        android:visibility="visible">

        <TextView
            android:id="@+id/txtOpening"
            style="@style/SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center"
            android:text="@string/opening"
            android:textSize="@dimen/text_content_size_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtClosing"
            style="@style/SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:gravity="center"
            android:text="@string/closing"
            android:textSize="@dimen/text_content_size_large"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linlayOpening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editHourOpening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:text="09"
                android:focusable="false" />

            <EditText
                android:id="@+id/editMinuteOpening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:text="00"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlayClosing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginStart="@dimen/text_content_margin_large"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editHourClosing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="2"
                android:text="22"
                android:focusable="false"/>

            <EditText
                android:id="@+id/editMinuteClosing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="2"
                android:text="00"
                android:focusable="false"/>

        </LinearLayout>

    </GridLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnPrevious"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFinish"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>