<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/consLayOGoodContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_very_small"
    android:layout_marginEnd="@dimen/margin_very_small">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/ordered_good_selector">

            <TextView
                android:id="@+id/txtOGoodName"
                style="@style/OrderedItemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ordered_good_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txtOGoodDesc"/>

            <TextView
                android:id="@+id/txtOGoodDesc"
                style="@style/OrderedItemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ordered_good_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtOGoodName"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/imgOGoodPic"
                android:layout_width="@dimen/ordered_good_pic_size_width"
                android:layout_height="@dimen/ordered_good_pic_size_height"
                android:src="@drawable/ic_store_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtOGoodDesc"
                android:layout_marginTop="@dimen/margin_small"
                android:contentDescription="@string/item_icon"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/imgCheck"
                style="@style/CheckStyle"
                android:src="@drawable/check"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

